Changing the Measuring Metrics for Price Analysis

--- a/PowerCo_EDA.ipynb
+++ b/PowerCo_EDA.ipynb
@@ -2091,7 +2091,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can observe that our data are mostly positivly skewed and this can be seen from the distribution of our data, lead to high values will long tail in our graphs."
+        "We can observe that our data are mostly positivly skewed and this can be seen from the distribution of our data, and high values with long tail in our graphs."
       ],
       "metadata": {
         "id": "eTNE36WW7wVe"
@@ -2114,9 +2114,9 @@
       "source": [
         "### What is Price Sensitivity?\n",
         "\n",
-        "Price sensitivity can be define as the degree of responses of a feature to a change in the price. This can be viewed as measuring the price elasticity of churn as opposed to the useal term of demand and supply. \n",
+        "Price sensitivity can be define as the degree of responses of a feature to a change in the price. \n",
         "\n",
-        "In testing our client hypothesis on whether churn is faced by change in price and to test the whether discount can make customers that are likely to churn remain in our company. "
+        "In testing our client hypothesis on whether churn has a significant relationship with change in price, we will be deriving the correlation between price and churn over time. "
       ],
       "metadata": {
         "id": "Ocdt_2go5cYb"
@@ -2127,12 +2127,21 @@
       "source": [
         "### Measuring rice Sensitivity to Churn Rate.\n",
         "\n",
-        "To measure the price sensitivity of our data we will be calculating the percentage change in price of churn and active customers. I use this method to calculate the price sensitivity of our client customers base off the data set that was give to use, the assumed way to calculate price sensitivity is to use the formular use to calculate price elasticity, which is percentage change in quantity divided by percentage change in price and in other to calculate this we will need the date at which each customer churn of which we do not have in our customer dataset. \n",
-        "\n",
-        "The first step in measuring and comparing the price sensitivity of customer that have churn and active is to marge the price dataset with the client dataset column of churn customer. This is followed by converting the price date from strick to datetime format, this will make it easy sort the data by month. After this, the data will be split into two dataframe i.e churn and active, and then we will average for the 6 different price we have in the price dataset. next, we will make the date as the index for the two dataset, this will enable us to resample the idex from the daily price to an average monthly price index. Lastly, we will be calculating the percentage change in price for both churn and active. \n",
+        "To measure the price sensitivity of our data we will be measuring correlative relationship that exist between churn and price. Base off the result we get from this measurement we will be able to determine whether there exist a negative or positive relationship between churn and price. If the relationship between the churn and price is positive, we will not reject the null hypothesis stating that there exist a relationship between churn and price. Other wise, we will accept the Alternative Hypothesis that there exist no relatonship between churn and price. The following steps will be taken to clean, sort, and measure our data in other to test our client hypothesis:\n",
         "\n",
         "\n",
-        "Evaluating whether our client customers are price sensitivity or not, we will be plotting a graph showing the percentage of change of churn compare with active customers and we can observe whether there is a significant different between churn and active customers. "
+        "\n",
+        "*   STEP 1: Convert the `price_date` column into date_time formate. This is will make it easy to sort and manupulate our data according to the date of each customer.\n",
+        "\n",
+        "*   STEP 2: Get the average price for a year, half the year, and three month( a quarter of a year).\n",
+        "\n",
+        "*   STEP 3: Change the names of all columns in the price dataset to reflect the new dataset, after this we will add the price dataset `price_off_peak_ver` with `price_off_peak_fix` and do the same for the ramaining 4 columns. \n",
+        "\n",
+        "*   STEP 4: Marge the a`client_churn` and `new_price`dataset into one dataframe using the `i.d` as the primary key. \n",
+        "\n",
+        "*   STEP 5: Perform a correlation on the new marge data to measure the relationship between churn and price. Following this we will create a heat map to visualize this relationship.\n",
+        "\n",
+        "*   STEP 6: Marge the `price_analysis` dataset with the `client_df` and dropping the churn column."
       ],
       "metadata": {
         "id": "O3euKa_d4keE"
@@ -4599,7 +4608,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1MoOQMXasGBm60UpPAxNZCiKeUhrQZBEx",
-      "authorship_tag": "ABX9TyMY86G9L1P03MCxM1B+K+v1",
+      "authorship_tag": "ABX9TyPzXlJaO1mpPUf7dKmmGfWL",
       "include_colab_link": true
     },
     "kernelspec": {
