Average Price for a year, 6 month, and 3  month.

--- a/PowerCo_EDA.ipynb
+++ b/PowerCo_EDA.ipynb
@@ -2232,32 +2232,31 @@
       "cell_type": "code",
       "source": [
         "\"\"\"\n",
-        "STEP 1: MARGING THE PRICE DATASET WITH CLIENT CHURN COLUMN.\n",
+        "STEP 1: GETTING AVERAGES PRICE FOR EACH MONTH.\n",
         "\"\"\"\n",
-        "# EXAMING THE ID COLUMN OF BOTH DATASET\n",
-        "pri = price_df['id'] == client_df['id'][0]\n",
-        "# price_df.loc[pri]\n",
+        "# Calculating the Average Price for the Verious Time Span. \n",
+        "average_year_price = price_df.groupby('id').mean().reset_index()\n",
+        "average_6m_price = price_df[price_df['price_date'] >= '2015-07-01'].groupby('id').mean().reset_index()\n",
+        "average_3m_price = price_df[price_df['price_date'] >= '2015-07-01'].groupby('id').mean().reset_index()\n",
         "\n",
-        "# MARGING THE TWO DATASET \n",
-        "price_join = pd.merge(price_df, client_df[['id','churn']], on='id')\n",
-        "price_join.loc[pri]"
+        "average_year_price"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 424
         },
         "id": "rMfJcoNKox1A",
-        "outputId": "ed1b66c0-9563-4492-dc0a-8cb50e8168bb"
+        "outputId": "c78e0258-cccb-4a4e-a1d1-378654ebbe54"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-4993d12b-0ed9-4e96-b7ab-a8b5a6ae1f00\">\n",
+              "  <div id=\"df-8a23a19f-3d68-4443-a853-95ff252f11ee\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2278,165 +2277,130 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>id</th>\n",
-              "      <th>price_date</th>\n",
               "      <th>price_off_peak_var</th>\n",
               "      <th>price_peak_var</th>\n",
               "      <th>price_mid_peak_var</th>\n",
               "      <th>price_off_peak_fix</th>\n",
               "      <th>price_peak_fix</th>\n",
               "      <th>price_mid_peak_fix</th>\n",
-              "      <th>churn</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>97926</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-02-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266931</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>0</th>\n",
+              "      <td>0002203ffbb812588b632b9e628cc38d</td>\n",
+              "      <td>0.124338</td>\n",
+              "      <td>0.103794</td>\n",
+              "      <td>0.073160</td>\n",
+              "      <td>40.701732</td>\n",
+              "      <td>24.421038</td>\n",
+              "      <td>16.280694</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97927</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-03-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266931</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>1</th>\n",
+              "      <td>0004351ebdd665e6ee664792efc4fd13</td>\n",
+              "      <td>0.146426</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>44.385450</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97928</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-04-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
+              "      <th>2</th>\n",
+              "      <td>0010bcc39e42b3c2131ed2ce55246e3c</td>\n",
+              "      <td>0.181558</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>45.319710</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0010ee3855fdea87602a5b7aba8e42de</td>\n",
+              "      <td>0.118757</td>\n",
+              "      <td>0.098292</td>\n",
+              "      <td>0.069032</td>\n",
+              "      <td>40.647427</td>\n",
+              "      <td>24.388455</td>\n",
+              "      <td>16.258971</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>00114d74e963e47177db89bc70108537</td>\n",
+              "      <td>0.147926</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
               "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97929</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-05-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97930</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-06-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>16091</th>\n",
+              "      <td>ffef185810e44254c3a4c6395e6b4d8a</td>\n",
+              "      <td>0.138863</td>\n",
+              "      <td>0.115125</td>\n",
+              "      <td>0.080780</td>\n",
+              "      <td>40.896427</td>\n",
+              "      <td>24.637456</td>\n",
+              "      <td>16.507972</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97931</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-07-01</td>\n",
-              "      <td>0.152445</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>16092</th>\n",
+              "      <td>fffac626da707b1b5ab11e8431a4d0a2</td>\n",
+              "      <td>0.147137</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>44.311375</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97932</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-08-01</td>\n",
-              "      <td>0.147983</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>16093</th>\n",
+              "      <td>fffc0cacd305dd51f316424bbb08d1bd</td>\n",
+              "      <td>0.153879</td>\n",
+              "      <td>0.129497</td>\n",
+              "      <td>0.094842</td>\n",
+              "      <td>41.160171</td>\n",
+              "      <td>24.895768</td>\n",
+              "      <td>16.763569</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97933</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-09-01</td>\n",
-              "      <td>0.147983</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.266930</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>16094</th>\n",
+              "      <td>fffe4f5646aa39c7f97f95ae2679ce64</td>\n",
+              "      <td>0.123858</td>\n",
+              "      <td>0.103499</td>\n",
+              "      <td>0.073735</td>\n",
+              "      <td>40.606699</td>\n",
+              "      <td>24.364017</td>\n",
+              "      <td>16.242678</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>97934</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-10-01</td>\n",
-              "      <td>0.144524</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.444710</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>97935</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-11-01</td>\n",
-              "      <td>0.144524</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.444710</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>97936</th>\n",
-              "      <td>34df5ec7833c34dd59fe2e95e942cd3a</td>\n",
-              "      <td>2015-12-01</td>\n",
-              "      <td>0.144524</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>44.444710</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>97937</th>\n",
-              "      <td>85730a9de2afa781f2ab0694dfda2b91</td>\n",
-              "      <td>2015-01-01</td>\n",
-              "      <td>0.188164</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>45.760931</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0</td>\n",
+              "      <th>16095</th>\n",
+              "      <td>ffff7fa066f1fb305ae285bb03bf325a</td>\n",
+              "      <td>0.125360</td>\n",
+              "      <td>0.104895</td>\n",
+              "      <td>0.075635</td>\n",
+              "      <td>40.647427</td>\n",
+              "      <td>24.388455</td>\n",
+              "      <td>16.258971</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>16096 rows × 7 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4993d12b-0ed9-4e96-b7ab-a8b5a6ae1f00')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8a23a19f-3d68-4443-a853-95ff252f11ee')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2487,12 +2451,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4993d12b-0ed9-4e96-b7ab-a8b5a6ae1f00 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8a23a19f-3d68-4443-a853-95ff252f11ee button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4993d12b-0ed9-4e96-b7ab-a8b5a6ae1f00');\n",
+              "          const element = document.querySelector('#df-8a23a19f-3d68-4443-a853-95ff252f11ee');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2514,25 +2478,24 @@
               "  "
             ],
             "text/plain": [
-              "                                     id  price_date  ...  price_mid_peak_fix  churn\n",
-              "97926  34df5ec7833c34dd59fe2e95e942cd3a  2015-02-01  ...                 0.0      0\n",
-              "97927  34df5ec7833c34dd59fe2e95e942cd3a  2015-03-01  ...                 0.0      0\n",
-              "97928  34df5ec7833c34dd59fe2e95e942cd3a  2015-04-01  ...                 0.0      0\n",
-              "97929  34df5ec7833c34dd59fe2e95e942cd3a  2015-05-01  ...                 0.0      0\n",
-              "97930  34df5ec7833c34dd59fe2e95e942cd3a  2015-06-01  ...                 0.0      0\n",
-              "97931  34df5ec7833c34dd59fe2e95e942cd3a  2015-07-01  ...                 0.0      0\n",
-              "97932  34df5ec7833c34dd59fe2e95e942cd3a  2015-08-01  ...                 0.0      0\n",
-              "97933  34df5ec7833c34dd59fe2e95e942cd3a  2015-09-01  ...                 0.0      0\n",
-              "97934  34df5ec7833c34dd59fe2e95e942cd3a  2015-10-01  ...                 0.0      0\n",
-              "97935  34df5ec7833c34dd59fe2e95e942cd3a  2015-11-01  ...                 0.0      0\n",
-              "97936  34df5ec7833c34dd59fe2e95e942cd3a  2015-12-01  ...                 0.0      0\n",
-              "97937  85730a9de2afa781f2ab0694dfda2b91  2015-01-01  ...                 0.0      0\n",
+              "                                     id  ...  price_mid_peak_fix\n",
+              "0      0002203ffbb812588b632b9e628cc38d  ...           16.280694\n",
+              "1      0004351ebdd665e6ee664792efc4fd13  ...            0.000000\n",
+              "2      0010bcc39e42b3c2131ed2ce55246e3c  ...            0.000000\n",
+              "3      0010ee3855fdea87602a5b7aba8e42de  ...           16.258971\n",
+              "4      00114d74e963e47177db89bc70108537  ...            0.000000\n",
+              "...                                 ...  ...                 ...\n",
+              "16091  ffef185810e44254c3a4c6395e6b4d8a  ...           16.507972\n",
+              "16092  fffac626da707b1b5ab11e8431a4d0a2  ...            0.000000\n",
+              "16093  fffc0cacd305dd51f316424bbb08d1bd  ...           16.763569\n",
+              "16094  fffe4f5646aa39c7f97f95ae2679ce64  ...           16.242678\n",
+              "16095  ffff7fa066f1fb305ae285bb03bf325a  ...           16.258971\n",
               "\n",
-              "[12 rows x 9 columns]"
+              "[16096 rows x 7 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 52
         }
       ]
     },
@@ -4650,7 +4613,7 @@
         "Ocdt_2go5cYb"
       ],
       "mount_file_id": "1MoOQMXasGBm60UpPAxNZCiKeUhrQZBEx",
-      "authorship_tag": "ABX9TyPWESpUFNQaDvXUw/WcJohe",
+      "authorship_tag": "ABX9TyPBAOQojmabgHvQxKS2Nw+M",
       "include_colab_link": true
     },
     "kernelspec": {
