--- a/PowerCo_Feature_Eng.ipynb
+++ b/PowerCo_Feature_Eng.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ojoadekunle/PowerCo-BCG-V.I/blob/main/PowerCo_Feature_Eng.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "RKM5zh8Ct7I5"
       },
       "source": [
@@ -876,8 +866,7 @@
     "colab": {
       "name": "PowerCo_Feature_Eng.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     }
   },
   "nbformat": 4,
